Got basic route tests working

--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,16 @@
 {
     "require": {
 	"silex/silex": "~1.1",
-        "behat/behat": "2.4.*@stable"
+        "behat/behat": "2.4.*@stable",
+        "behat/mink": "1.4.*@stable",
+        "behat/mink-extension": "*",
+        "behat/mink-goutte-driver": "*"
     },
 
     "config": {
         "bin-dir": "bin/"
     },
     "autoload": {
-        "psr-0": { "Shopping": "src/Shopping" }
+        "psr-4": {"Shopping\\": "src/"}
     }
 }
